tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__disk_sector.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Disk[{0, 0}, 1, {0, Pi}]}]\")"
---
<svg width="360" height="180" viewBox="0 0 360 180" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x180"><rect x="0" y="0" width="360.00" height="180.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x180)">
<path d="M 180.00,173.33 L 346.67,173.33 A 166.67,166.67 0 0 0 13.33,173.33 Z" fill="rgb(0,0,0)"/>
</g>
</svg>
