tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__filled_polar_curve.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[FilledPolarCurve[PolarCurve[Sin[2 t], {t, 0, 2 Pi}]]]\")"
---
<svg width="360" height="360" viewBox="0 0 360 360" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x360"><rect x="0" y="0" width="360.00" height="360.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x360)">
<polygon points="180.00,179.98 189.10,179.79 198.16,179.21 207.17,178.26 216.10,176.94 224.92,175.24 233.59,173.18 242.11,170.77 250.43,168.02 258.53,164.94 266.40,161.55 274.00,157.85 281.32,153.87 288.33,149.62 295.01,145.13 301.35,140.41 307.32,135.48 312.91,130.37 318.11,125.09 322.90,119.68 327.27,114.16 331.21,108.55 334.72,102.88 337.78,97.17 340.39,91.45 342.55,85.75 344.26,80.09 345.51,74.50 346.31,69.01 346.66,63.64 346.57,58.42 346.04,53.38 345.08,48.53 343.70,43.91 341.92,39.53 339.75,35.43 337.20,31.61 334.28,28.10 331.03,24.93 327.44,22.11 323.55,19.65 319.37,17.57 314.93,15.89 310.25,14.62 305.35,13.77 300.26,13.35 295.00,13.36 289.60,13.83 284.09,14.74 278.48,16.10 272.81,17.92 267.10,20.19 261.38,22.92 255.68,26.09 250.02,29.71 244.43,33.76 238.93,38.24 233.55,43.13 228.32,48.43 223.25,54.12 218.37,60.18 213.70,66.61 209.27,73.37 205.08,80.46 201.17,87.85 197.55,95.52 194.23,103.45 191.23,111.61 188.57,119.98 186.25,128.54 184.28,137.25 182.68,146.10 181.44,155.05 180.58,164.08 180.11,173.15 180.01,182.25 180.30,191.34 180.97,200.40 182.01,209.39 183.43,218.29 185.22,227.08 187.36,235.71 189.86,244.18 192.69,252.45 195.85,260.50 199.32,268.30 203.09,275.84 207.14,283.08 211.45,290.01 216.01,296.60 220.78,302.85 225.76,308.73 230.91,314.23 236.22,319.32 241.67,324.01 247.21,328.28 252.84,332.11 258.53,335.50 264.24,338.45 269.96,340.95 275.65,343.00 281.29,344.59 286.86,345.73 292.32,346.41 297.65,346.65 302.83,346.45 307.83,345.81 312.62,344.75 317.18,343.27 321.50,341.39 325.53,339.12 329.27,336.48 332.70,333.48 335.79,330.14 338.52,326.47 340.89,322.51 342.86,318.26 344.44,313.76 345.61,309.02 346.35,304.08 346.67,298.94 346.54,293.64 345.96,288.21 344.94,282.67 343.46,277.04 341.53,271.36 339.14,265.65 336.31,259.93 333.02,254.24 329.30,248.59 325.14,243.02 320.56,237.55 315.56,232.20 310.16,227.01 304.38,221.99 298.22,217.16 291.71,212.55 284.86,208.17 277.70,204.06 270.24,200.22 262.50,196.67 254.51,193.43 246.29,190.51 237.87,187.93 229.27,185.70 220.52,183.82 211.65,182.31 202.68,181.17 193.63,180.41 184.55,180.02 175.45,180.02 166.37,180.41 157.32,181.17 148.35,182.31 139.48,183.82 130.73,185.70 122.13,187.93 113.71,190.51 105.49,193.43 97.50,196.67 89.76,200.22 82.30,204.06 75.14,208.17 68.29,212.55 61.78,217.16 55.62,221.99 49.84,227.01 44.44,232.20 39.44,237.55 34.86,243.02 30.70,248.59 26.98,254.24 23.69,259.93 20.86,265.65 18.47,271.36 16.54,277.04 15.06,282.67 14.04,288.21 13.46,293.64 13.33,298.94 13.65,304.08 14.39,309.02 15.56,313.76 17.14,318.26 19.11,322.51 21.48,326.47 24.21,330.14 27.30,333.48 30.73,336.48 34.47,339.12 38.50,341.39 42.82,343.27 47.38,344.75 52.17,345.81 57.17,346.45 62.35,346.65 67.68,346.41 73.14,345.73 78.71,344.59 84.35,343.00 90.04,340.95 95.76,338.45 101.47,335.50 107.16,332.11 112.79,328.28 118.33,324.01 123.78,319.32 129.09,314.23 134.24,308.73 139.22,302.85 143.99,296.60 148.55,290.01 152.86,283.08 156.91,275.84 160.68,268.30 164.15,260.50 167.31,252.45 170.14,244.18 172.64,235.71 174.78,227.08 176.57,218.29 177.99,209.39 179.03,200.40 179.70,191.34 179.99,182.25 179.89,173.15 179.42,164.08 178.56,155.05 177.32,146.10 175.72,137.25 173.75,128.54 171.43,119.98 168.77,111.61 165.77,103.45 162.45,95.52 158.83,87.85 154.92,80.46 150.73,73.37 146.30,66.61 141.63,60.18 136.75,54.12 131.68,48.43 126.45,43.13 121.07,38.24 115.57,33.76 109.98,29.71 104.32,26.09 98.62,22.92 92.90,20.19 87.19,17.92 81.52,16.10 75.91,14.74 70.40,13.83 65.00,13.36 59.74,13.35 54.65,13.77 49.75,14.62 45.07,15.89 40.63,17.57 36.45,19.65 32.56,22.11 28.97,24.93 25.72,28.10 22.80,31.61 20.25,35.43 18.08,39.53 16.30,43.91 14.92,48.53 13.96,53.38 13.43,58.42 13.34,63.64 13.69,69.01 14.49,74.50 15.74,80.09 17.45,85.75 19.61,91.45 22.22,97.17 25.28,102.88 28.79,108.55 32.73,114.16 37.10,119.68 41.89,125.09 47.09,130.37 52.68,135.48 58.65,140.41 64.99,145.13 71.67,149.62 78.68,153.87 86.00,157.85 93.60,161.55 101.47,164.94 109.57,168.02 117.89,170.77 126.41,173.18 135.08,175.24 143.90,176.94 152.83,178.26 161.84,179.21 170.90,179.79 180.00,179.98" fill="rgb(0,0,0)"/>
</g>
</svg>
