tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__filled_polar_curve_styled.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Blue, Opacity[0.5], FilledPolarCurve[PolarCurve[1 + Cos[t], {t, 0, 2 Pi}]]}]\")"
---
<svg width="360" height="416" viewBox="0 0 360 416" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x416"><rect x="0" y="0" width="360.00" height="416.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x416)">
<polygon points="346.67,208.00 346.57,201.77 346.27,195.56 345.78,189.35 345.10,183.17 344.22,177.01 343.15,170.89 341.88,164.81 340.43,158.77 338.79,152.79 336.96,146.87 334.95,141.02 332.76,135.24 330.39,129.54 327.84,123.93 325.13,118.40 322.25,112.98 319.20,107.66 315.99,102.44 312.63,97.35 309.11,92.36 305.45,87.51 301.64,82.78 297.70,78.19 293.63,73.73 289.43,69.42 285.10,65.25 280.66,61.24 276.11,57.37 271.46,53.67 266.71,50.12 261.86,46.74 256.93,43.52 251.92,40.48 246.83,37.60 241.68,34.89 236.46,32.36 231.19,30.00 225.87,27.83 220.51,25.82 215.11,24.00 209.68,22.36 204.23,20.89 198.76,19.60 193.29,18.50 187.81,17.57 182.33,16.81 176.87,16.24 171.41,15.83 165.98,15.61 160.58,15.55 155.21,15.66 149.88,15.94 144.60,16.39 139.36,16.99 134.19,17.76 129.07,18.68 124.03,19.76 119.05,20.99 114.15,22.36 109.34,23.87 104.61,25.53 99.97,27.31 95.43,29.23 90.98,31.27 86.64,33.44 82.41,35.72 78.28,38.11 74.27,40.60 70.38,43.20 66.60,45.90 62.95,48.68 59.42,51.55 56.01,54.51 52.74,57.53 49.59,60.63 46.58,63.79 43.69,67.01 40.95,70.28 38.33,73.60 35.85,76.96 33.50,80.36 31.29,83.79 29.22,87.24 27.28,90.72 25.47,94.21 23.79,97.70 22.25,101.21 20.84,104.71 19.55,108.20 18.40,111.68 17.37,115.15 16.46,118.60 15.67,122.02 15.01,125.41 14.45,128.77 14.02,132.08 13.69,135.36 13.47,138.58 13.35,141.76 13.33,144.88 13.41,147.95 13.59,150.95 13.85,153.89 14.20,156.76 14.63,159.57 15.14,162.30 15.72,164.95 16.37,167.53 17.08,170.03 17.86,172.45 18.69,174.79 19.57,177.04 20.50,179.21 21.47,181.29 22.48,183.29 23.52,185.20 24.59,187.03 25.68,188.77 26.80,190.42 27.93,191.98 29.07,193.46 30.22,194.86 31.36,196.17 32.51,197.40 33.65,198.54 34.78,199.61 35.90,200.60 36.99,201.51 38.07,202.35 39.12,203.11 40.14,203.81 41.12,204.44 42.07,205.00 42.99,205.51 43.86,205.95 44.68,206.34 45.46,206.68 46.19,206.97 46.86,207.21 47.48,207.42 48.05,207.58 48.55,207.71 49.00,207.81 49.38,207.89 49.71,207.94 49.97,207.97 50.16,207.99 50.29,208.00 50.36,208.00 50.36,208.00 50.29,208.00 50.16,208.01 49.97,208.03 49.71,208.06 49.38,208.11 49.00,208.19 48.55,208.29 48.05,208.42 47.48,208.58 46.86,208.79 46.19,209.03 45.46,209.32 44.68,209.66 43.86,210.05 42.99,210.49 42.07,211.00 41.12,211.56 40.14,212.19 39.12,212.89 38.07,213.65 36.99,214.49 35.90,215.40 34.78,216.39 33.65,217.46 32.51,218.60 31.36,219.83 30.22,221.14 29.07,222.54 27.93,224.02 26.80,225.58 25.68,227.23 24.59,228.97 23.52,230.80 22.48,232.71 21.47,234.71 20.50,236.79 19.57,238.96 18.69,241.21 17.86,243.55 17.08,245.97 16.37,248.47 15.72,251.05 15.14,253.70 14.63,256.43 14.20,259.24 13.85,262.11 13.59,265.05 13.41,268.05 13.33,271.12 13.35,274.24 13.47,277.42 13.69,280.64 14.02,283.92 14.45,287.23 15.01,290.59 15.67,293.98 16.46,297.40 17.37,300.85 18.40,304.32 19.55,307.80 20.84,311.29 22.25,314.79 23.79,318.30 25.47,321.79 27.28,325.28 29.22,328.76 31.29,332.21 33.50,335.64 35.85,339.04 38.33,342.40 40.95,345.72 43.69,348.99 46.58,352.21 49.59,355.37 52.74,358.47 56.01,361.49 59.42,364.45 62.95,367.32 66.60,370.10 70.38,372.80 74.27,375.40 78.28,377.89 82.41,380.28 86.64,382.56 90.98,384.73 95.43,386.77 99.97,388.69 104.61,390.47 109.34,392.13 114.15,393.64 119.05,395.01 124.03,396.24 129.07,397.32 134.19,398.24 139.36,399.01 144.60,399.61 149.88,400.06 155.21,400.34 160.58,400.45 165.98,400.39 171.41,400.17 176.87,399.76 182.33,399.19 187.81,398.43 193.29,397.50 198.76,396.40 204.23,395.11 209.68,393.64 215.11,392.00 220.51,390.18 225.87,388.17 231.19,386.00 236.46,383.64 241.68,381.11 246.83,378.40 251.92,375.52 256.93,372.48 261.86,369.26 266.71,365.88 271.46,362.33 276.11,358.63 280.66,354.76 285.10,350.75 289.43,346.58 293.63,342.27 297.70,337.81 301.64,333.22 305.45,328.49 309.11,323.64 312.63,318.65 315.99,313.56 319.20,308.34 322.25,303.02 325.13,297.60 327.84,292.07 330.39,286.46 332.76,280.76 334.95,274.98 336.96,269.13 338.79,263.21 340.43,257.23 341.88,251.19 343.15,245.11 344.22,238.99 345.10,232.83 345.78,226.65 346.27,220.44 346.57,214.23 346.67,208.00" fill="rgb(0,0,255)" fill-opacity="0.5"/>
</g>
</svg>
