tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__filled_polar_curve_variable_only.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[FilledPolarCurve[1 - Cos[t], t]]\")"
---
<svg width="360" height="416" viewBox="0 0 360 416" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x416"><rect x="0" y="0" width="360.00" height="416.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x416)">
<polygon points="309.63,208.00 309.66,208.00 309.76,207.99 309.92,207.98 310.15,207.96 310.44,207.91 310.79,207.85 311.21,207.77 311.69,207.65 312.22,207.50 312.82,207.32 313.46,207.10 314.17,206.83 314.92,206.52 315.72,206.15 316.57,205.74 317.46,205.26 318.39,204.73 319.36,204.13 320.36,203.47 321.40,202.74 322.46,201.94 323.55,201.06 324.66,200.11 325.78,199.09 326.91,197.98 328.06,196.79 329.21,195.52 330.35,194.17 331.50,192.73 332.63,191.21 333.76,189.60 334.86,187.91 335.94,186.13 337.00,184.26 338.03,182.30 339.02,180.26 339.97,178.13 340.87,175.92 341.73,173.63 342.53,171.25 343.28,168.79 343.96,166.25 344.58,163.63 345.12,160.94 345.59,158.17 345.98,155.33 346.29,152.43 346.51,149.45 346.63,146.42 346.67,143.33 346.60,140.18 346.43,136.97 346.16,133.72 345.77,130.42 345.28,127.09 344.67,123.71 343.94,120.31 343.10,116.87 342.13,113.41 341.04,109.94 339.82,106.45 338.47,102.95 336.99,99.45 335.38,95.95 333.64,92.45 331.76,88.97 329.76,85.51 327.61,82.06 325.33,78.65 322.92,75.27 320.37,71.93 317.69,68.63 314.88,65.38 311.93,62.19 308.85,59.06 305.63,56.00 302.29,53.01 298.83,50.10 295.24,47.27 291.52,44.53 287.68,41.88 283.73,39.33 279.66,36.89 275.48,34.55 271.19,32.33 266.80,30.23 262.31,28.25 257.71,26.39 253.03,24.67 248.26,23.09 243.40,21.64 238.46,20.34 233.45,19.19 228.37,18.19 223.22,17.35 218.01,16.66 212.75,16.13 207.45,15.77 202.10,15.57 196.71,15.54 191.29,15.69 185.85,16.00 180.39,16.49 174.92,17.16 169.44,18.00 163.96,19.02 158.48,20.21 153.03,21.59 147.59,23.14 142.17,24.88 136.79,26.79 131.45,28.88 126.15,31.15 120.91,33.59 115.72,36.21 110.60,39.00 105.55,41.97 100.57,45.10 95.68,48.40 90.88,51.87 86.18,55.49 81.58,59.28 77.08,63.22 72.70,67.31 68.44,71.55 64.30,75.93 60.29,80.46 56.42,85.12 52.68,89.91 49.09,94.83 45.65,99.87 42.36,105.03 39.24,110.30 36.27,115.67 33.47,121.15 30.84,126.72 28.38,132.38 26.10,138.12 24.00,143.93 22.08,149.82 20.34,155.77 18.79,161.78 17.44,167.84 16.27,173.94 15.29,180.08 14.51,186.26 13.92,192.45 13.53,198.66 13.33,204.89 13.33,211.11 13.53,217.34 13.92,223.55 14.51,229.74 15.29,235.92 16.27,242.06 17.44,248.16 18.79,254.22 20.34,260.23 22.08,266.18 24.00,272.07 26.10,277.88 28.38,283.62 30.84,289.28 33.47,294.85 36.27,300.33 39.24,305.70 42.36,310.97 45.65,316.13 49.09,321.17 52.68,326.09 56.42,330.88 60.29,335.54 64.30,340.07 68.44,344.45 72.70,348.69 77.08,352.78 81.58,356.72 86.18,360.51 90.88,364.13 95.68,367.60 100.57,370.90 105.55,374.03 110.60,377.00 115.72,379.79 120.91,382.41 126.15,384.85 131.45,387.12 136.79,389.21 142.17,391.12 147.59,392.86 153.03,394.41 158.48,395.79 163.96,396.98 169.44,398.00 174.92,398.84 180.39,399.51 185.85,400.00 191.29,400.31 196.71,400.46 202.10,400.43 207.45,400.23 212.75,399.87 218.01,399.34 223.22,398.65 228.37,397.81 233.45,396.81 238.46,395.66 243.40,394.36 248.26,392.91 253.03,391.33 257.71,389.61 262.31,387.75 266.80,385.77 271.19,383.67 275.48,381.45 279.66,379.11 283.73,376.67 287.68,374.12 291.52,371.47 295.24,368.73 298.83,365.90 302.29,362.99 305.63,360.00 308.85,356.94 311.93,353.81 314.88,350.62 317.69,347.37 320.37,344.07 322.92,340.73 325.33,337.35 327.61,333.94 329.76,330.49 331.76,327.03 333.64,323.55 335.38,320.05 336.99,316.55 338.47,313.05 339.82,309.55 341.04,306.06 342.13,302.59 343.10,299.13 343.94,295.69 344.67,292.29 345.28,288.91 345.77,285.58 346.16,282.28 346.43,279.03 346.60,275.82 346.67,272.67 346.63,269.58 346.51,266.55 346.29,263.57 345.98,260.67 345.59,257.83 345.12,255.06 344.58,252.37 343.96,249.75 343.28,247.21 342.53,244.75 341.73,242.37 340.87,240.08 339.97,237.87 339.02,235.74 338.03,233.70 337.00,231.74 335.94,229.87 334.86,228.09 333.76,226.40 332.63,224.79 331.50,223.27 330.35,221.83 329.21,220.48 328.06,219.21 326.91,218.02 325.78,216.91 324.66,215.89 323.55,214.94 322.46,214.06 321.40,213.26 320.36,212.53 319.36,211.87 318.39,211.27 317.46,210.74 316.57,210.26 315.72,209.85 314.92,209.48 314.17,209.17 313.46,208.90 312.82,208.68 312.22,208.50 311.69,208.35 311.21,208.23 310.79,208.15 310.44,208.09 310.15,208.04 309.92,208.02 309.76,208.01 309.66,208.00 309.63,208.00" fill="rgb(0,0,0)"/>
</g>
</svg>
