tests/interpreter_tests/snapshots/interpreter_tests__interpreter_tests__graphics__graphics__primitives__line.snap
---
source: tests/interpreter_tests/graphics.rs
expression: "export_svg(\"Graphics[{Line[{{0, 0}, {1, 1}, {2, 0}}]}]\")"
---
<svg width="360" height="180" viewBox="0 0 360 180" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
<defs>
<clipPath id="plotClip_360x180"><rect x="0" y="0" width="360.00" height="180.00"/></clipPath>
</defs>
<g clip-path="url(#plotClip_360x180)">
<polyline points="13.33,173.33 180.00,6.67 346.67,173.33" fill="none" stroke="rgb(0,0,0)" stroke-width="1.00" stroke-linejoin="round" stroke-linecap="butt"/>
</g>
</svg>
